# pioneer3at_ETSIDI

./: .gitmodules  README.md  README.md~  map.pgm  map.yaml  mylaserdata.bag  pioneer3at.launch  pioneer3at.launch~
laser_drivers/liblms1xx/libLMS1xx/: CMakeLists.txt  LMS1xx.cpp  README  test.cpp
pioneer_utils/: CMakeLists.txt  CMakeLists.txt~  clearmap.yaml  map.yaml  map.yaml~  package.xml  package.xml~  pioneer3at-p2os.launch  pioneer3at-rosaria.launch  pioneer3at-rosaria.launch~
pioneer_utils/follower/: follower-pioneer-3at.launch  gmapping-follower.launch  simple-follower.launch
pioneer_utils/gazebo/: materials.xacro  pioneer3at.gazebo  pioneer3at.gazebo.launch  pioneer3at.world  pioneer3at.xacro  pioneer3at_body.xacro  pioneer3at_body.xacro~  pioneer3at_gazebo_world.launch  pioneer3at_pilars.xacro  pioneer3at_rviz.launch  pioneer3at_wheels.xacro  upload_pioneer3at.xml
pioneer_utils/gazebo/meshes/: back_up.fcstd  back_up.fcstd1  lateral.dxf  lateral.fcstd  lateral.stl  lateral_back_down.fcstd  lateral_gazebo.fcstd  sick_lms100.stl  sick_lms100_mod.dae  sick_lms100_mod.stl  toptop.stl
pioneer_utils/gazebo/navigation/: gazebo-global_navigation_p3at.launch  gazebo-local_navigation_p3at.launch  gazebo-navigation_p3at.launch
pioneer_utils/main/: endurance_test.launch  endurance_test_floor_zero.launch  endurance_test_lab.launch  locations.txt  locations_floor_zero.txt  locations_lab.txt
pioneer_utils/maps/: blank-map.yaml  floor_zero-map.launch  floor_zero-map.yaml  gazebo-willowgarage.yaml  load-map.launch  slam_real1.pgm  slam_real1.yaml  slam_real2.pgm  slam_real2.yaml
pioneer_utils/navigation/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params_p3at.yaml  costmap_common_params_p3at.yaml~  global_costmap_params.yaml  kinect_to_laser.launch  kinect_to_laser.launch~  local_costmap_params.yaml  local_costmap_params.yaml~  nav2d-pioneer3at.launch  navigation-pioneer-3at.launch  navigation-pioneer-3at.launch~  navigation_p3at.launch
pioneer_utils/navigation/common/: costmap_common_params_p3at.yaml  global_planner_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml  (+1 more)
pioneer_utils/panorama/: panorama-pioneer-3at.launch
pioneer_utils/rviz/: global_navigation.rviz  gmapping.rviz  kinect.rviz  local_navigation.rviz  navigation.rviz  rviz-global_navigation.launch  rviz-gmapping.launch  rviz-local_navigation.launch  rviz-navigation.launch
pioneer_utils/sensors/: LMS1xx.launch  kinect3D.launch.xml  kinect_3dsensor.launch  kinect_to_laser.launch  kinect_to_laser_long.launch  kinect_to_laser_low.launch  laserscan_multi_merger.launch  pioneer3at-p2os.launch~  pioneer3at-rosaria.launch  rosaria.launch
pioneer_utils/src/: endurance_test.py  moving_alone.cpp  moving_alone1.cpp  points.cpp  points.py  sounds.cpp  teleop_p3at.cpp
teleop_pioneer/: CMakeLists.txt  CMakeLists.txt~  package-xml~  package.xml  package.xml~
teleop_pioneer/src/: main-char.cpp  main.cpp  moving_alone.cpp  teleop_p3at.cpp
(+83 files in other folders)
